--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
     }
     function goi(){
-        let socket = new WebSocket("ws://85.174.200.129:8080");
+        let socket = new WebSocket("ws://localhost:8080");
         socket.onopen = function () {
             socket.send(g.value.trim());
             document.querySelector("textarea").addEventListener('keyup', function (e) {
